attached_assets/Pasted-n-Master-2025-01-01-04-02-32-0000-1819-INFO-Starting-gunicorn-21-2-0-2025-01-01-04-02-32--1735704183986.txt
n: Master
 [2025-01-01 04:02:32 +0000] [1819] [INFO] Starting gunicorn 21.2.0
[2025-01-01 04:02:32 +0000] [1819] [INFO] Listening at: http://0.0.0.0:5000 (1819)
[2025-01-01 04:02:32 +0000] [1819] [INFO] Using worker: sync
[2025-01-01 04:02:32 +0000] [1824] [INFO] Booting worker with pid: 1824
              precision    recall  f1-score   support

           0       1.00      0.83      0.91         6
           1       0.86      1.00      0.92         6

    accuracy                           0.92        12
   macro avg       0.93      0.92      0.92        12
weighted avg       0.93      0.92      0.92        12

[2025-01-01 04:02:48,358] ERROR in app: Exception on /team/palo-alto [GET]
Traceback (most recent call last):
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/main.py", line 1420, in team_page
    return render_template('teams.html',
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/flask/templating.py", line 151, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/runner/Final-Project-112424/templates/teams.html", line 221, in template
    {% for player in roster|sort(attribute='cap_number', key=lambda x: (0 if x.cap_number.startswith('1') else int(x.cap_number.rstrip('ABCabc')), x.cap_number)) %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: expected token ',', got 'x'
